Fix multiple pipeline executors inside pipeline causes error #3503 - Reinforcement of Transform and Data class creation code with reflection to better signal errors - Removed reflection to create RecordsFromStreamData - Deprecated transform RecordsFromStream